Fix theme onboarding being stuck in small resolutions (#2192)

--- a/app/components/pages/onboarding-steps/ThemeSelector.m.less
+++ b/app/components/pages/onboarding-steps/ThemeSelector.m.less
@@ -2,7 +2,7 @@
 
 .container {
   display: flex;
-  width: 672px;
+  width: 100%;
   justify-content: space-around;
   flex-wrap: wrap;
 }
@@ -10,7 +10,7 @@
 .cell {
   .radius();
 
-  width: 300px;
+  width: 250px;
   position: relative;
   margin-top: 16px;
   overflow: hidden;
